vnet-topologies/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_vm1net1_adminPassword": {
            "defaultValue": null,
            "type": "securestring"
        },
        "virtualMachines_vm2net2_adminPassword": {
            "defaultValue": null,
            "type": "securestring"
        },
        "virtualMachines_vm3net3_adminPassword": {
            "defaultValue": null,
            "type": "securestring"
        },
        "virtualMachines_vm1net1_name": {
            "defaultValue": "vm1net1",
            "type": "string"
        },
        "virtualMachines_vm2net2_name": {
            "defaultValue": "vm2net2",
            "type": "string"
        },
        "virtualMachines_vm3net3_name": {
            "defaultValue": "vm3net3",
            "type": "string"
        },
        "networkInterfaces_vm1net1633_name": {
            "defaultValue": "vm1net1633",
            "type": "string"
        },
        "networkInterfaces_vm2net2921_name": {
            "defaultValue": "vm2net2921",
            "type": "string"
        },
        "networkInterfaces_vm3net3445_name": {
            "defaultValue": "vm3net3445",
            "type": "string"
        },
        "networkSecurityGroups_nsg1net1_name": {
            "defaultValue": "nsg1net1",
            "type": "string"
        },
        "networkSecurityGroups_nsg2net2_name": {
            "defaultValue": "nsg2net2",
            "type": "string"
        },
        "networkSecurityGroups_nsg3net3_name": {
            "defaultValue": "nsg3net3",
            "type": "string"
        },
        "publicIPAddresses_gw1net1_ip_name": {
            "defaultValue": "gw1net1-ip",
            "type": "string"
        },
        "publicIPAddresses_vm1net1_ip_name": {
            "defaultValue": "vm1net1-ip",
            "type": "string"
        },
        "publicIPAddresses_vm2net2_ip_name": {
            "defaultValue": "vm2net2-ip",
            "type": "string"
        },
        "publicIPAddresses_gw3net3_ip_name": {
            "defaultValue": "gw3net3-ip",
            "type": "string"
        },
        "publicIPAddresses_vm3net3_ip_name": {
            "defaultValue": "vm3net3-ip",
            "type": "string"
        },
        "virtualNetworks_net1dublin_name": {
            "defaultValue": "net1dublin",
            "type": "string"
        },
        "virtualNetworks_net2dublin_name": {
            "defaultValue": "net2dublin",
            "type": "string"
        },
        "virtualNetworks_net3amsterdam_name": {
            "defaultValue": "net3amsterdam",
            "type": "string"
        },
        "storageAccounts_exp16stga_name": {
            "defaultValue": "exp16stga",
            "type": "string"
        },
        "storageAccounts_exp16stgb_name": {
            "defaultValue": "exp16stgb",
            "type": "string"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Compute/virtualMachines/vm1net1'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_vm1net1_name')]",
            "apiVersion": "2015-06-15",
            "location": "northeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_vm1net1_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_exp16stga_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_vm1net1_name'),'201699225059.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_vm1net1_name')]",
                    "adminUsername": "mzaharia",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('virtualMachines_vm1net1_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm1net1633_name'))]"
                        }
                    ]
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_exp16stga_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm1net1633_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Compute/virtualMachines/vm2net2'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_vm2net2_name')]",
            "apiVersion": "2015-06-15",
            "location": "northeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_vm2net2_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_exp16stga_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_vm2net2_name'),'201699225443.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_vm2net2_name')]",
                    "adminUsername": "mzaharia",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('virtualMachines_vm2net2_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm2net2921_name'))]"
                        }
                    ]
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_exp16stga_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm2net2921_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Compute/virtualMachines/vm3net3'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_vm3net3_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_vm3net3_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_exp16stgb_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_vm3net3_name'),'201699225653.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_vm3net3_name')]",
                    "adminUsername": "mzaharia",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('virtualMachines_vm3net3_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm3net3445_name'))]"
                        }
                    ]
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_exp16stgb_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm3net3445_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/networkInterfaces/vm1net1633'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_vm1net1633_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm1net1_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_net1dublin_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg1net1_name'))]"
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm1net1_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_net1dublin_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg1net1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/networkInterfaces/vm2net2921'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_vm2net2921_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.2.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm2net2_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_net2dublin_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg2net2_name'))]"
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm2net2_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_net2dublin_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg2net2_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/networkInterfaces/vm3net3445'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_vm3net3445_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.3.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm3net3_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_net3amsterdam_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg3net3_name'))]"
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm3net3_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_net3amsterdam_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg3net3_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/networkSecurityGroups/nsg1net1'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_nsg1net1_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/networkSecurityGroups/nsg2net2'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_nsg2net2_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/networkSecurityGroups/nsg3net3'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_nsg3net3_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/publicIPAddresses/gw1net1-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_gw1net1_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/publicIPAddresses/vm1net1-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_vm1net1_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/publicIPAddresses/vm2net2-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_vm2net2_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/publicIPAddresses/gw3net3-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_gw3net3_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/publicIPAddresses/vm3net3-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_vm3net3_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/virtualNetworks/net1dublin'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_net1dublin_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.1.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.1.0/25"
                        }
                    },
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "10.0.1.128/28"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/virtualNetworks/net2dublin'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_net2dublin_name')]",
            "apiVersion": "2016-03-30",
            "location": "northeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.2.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.2.0/25"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Network/virtualNetworks/net3amsterdam'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_net3amsterdam_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.3.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.3.0/25"
                        }
                    },
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "10.0.3.128/28"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Storage/storageAccounts/exp16stga'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_exp16stga_name')]",
            "apiVersion": "2016-01-01",
            "location": "northeurope",
            "tags": {},
            "properties": {},
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: 'providers/Microsoft.Storage/storageAccounts/exp16stgb'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_exp16stgb_name')]",
            "apiVersion": "2016-01-01",
            "location": "westeurope",
            "tags": {},
            "properties": {},
            "resources": [],
            "dependsOn": []
        }
    ]
}
